# LinkedList

./: CMakeLists.txt  main.cpp
.nova/Tasks/: LinkedList.json
src/: LinkedList.cpp  LinkedList.h  LinkedListDemo.cpp  Student.h
